--- a/plugins/oh-my-idea/src/META-INF/plugin.xml
+++ b/plugins/oh-my-idea/src/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>com.intellij.ohmyidea</id>
   <name>oh-my-idea</name>
-  <description>IDEA helper</description>
+  <description>IDEA KeyMap helper for Programming quickly</description>
   <version>1.0.0</version>
   <vendor url="http://codecode.fun">vsmysee</vendor>
 
